# multimodal

./: .gitignore  README.md  package.json
api/: .gitignore  README.md  main.py  pyproject.toml
web/: .gitignore  package.json
web/app/: page.tsx
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
web/lib/: rag.ts
