[project]
name = "video-qa-api"
version = "0.1.0"
description = "FastAPI backend for the Multimodal RAG Video QA System"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.9" # youtube-transcript-api needs >=3.8, FastAPI benefits from newer versions
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.112.0",
    "uvicorn[standard]==0.30.5",
    "python-dotenv==1.0.1",
    "youtube-transcript-api==0.6.2",
    "psycopg2-binary==2.9.9", # For PostgreSQL
    "pgvector==0.3.2",       # pgvector for psycopg2
    "google-generativeai==0.8.3", # For Gemini
    "pydantic==2.9.0",
    "scikit-learn==1.3.0",  # For TF-IDF and cosine similarity
    "numpy>=1.21.0",          # For numerical operations
    "opencv-python==4.10.0.84",  # For video frame extraction
    "Pillow==10.4.0",       # For image processing
    "yt-dlp>=2024.8.6"      # For downloading video content
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true 